Created a lil' animation

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -54,7 +54,9 @@ svg {
     background-color: #23282e;
 }
 
-.name {
+.name-typing {
+    font-family: "Cutive Mono", monospace;
+    padding: 3rem;
 }
 .burger-menu {
 }
