Completely redone the animation using scss

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,6 +12,100 @@
     padding: 0 20vw;
 }
 
+/*===== ANIMATIONS =====*/
+@keyframes typing {
+    from {
+        content: "Aleshin Stanislav|";
+    }
+    3.125% {
+        content: "Aleshin Stanisla|";
+    }
+    6.25% {
+        content: "Aleshin Stanisl|";
+    }
+    9.375% {
+        content: "Aleshin Stanis|";
+    }
+    12.5% {
+        content: "Aleshin Stani|";
+    }
+    15.625% {
+        content: "Aleshin Stan|";
+    }
+    18.75% {
+        content: "Aleshin Sta|";
+    }
+    21.875% {
+        content: "Aleshin St|a";
+    }
+    25% {
+        content: "Aleshin S|ta";
+    }
+    28.125% {
+        content: "Aleshin |ta";
+    }
+    31.25% {
+        content: "Aleshin |sta";
+    }
+    34.375% {
+        content: "Aleshin| sta";
+    }
+    37.5% {
+        content: "Aleshi| sta";
+    }
+    40.625% {
+        content: "Alesh|i sta";
+    }
+    43.75% {
+        content: "Ales|hi sta";
+    }
+    46.875% {
+        content: "Ale|shi sta";
+    }
+    50% {
+        content: "Al|eshi sta";
+    }
+    53.125% {
+        content: "A|eshi sta";
+    }
+    56.25% {
+        content: "|eshi sta";
+    }
+    59.375% {
+        content: "L|eshi sta";
+    }
+    62.5% {
+        content: "Le|shi sta";
+    }
+    65.625% {
+        content: "Les|hi sta";
+    }
+    68.75% {
+        content: "Lesh|i sta";
+    }
+    71.875% {
+        content: "Leshi| sta";
+    }
+    75% {
+        content: "Leshi |sta";
+    }
+    78.125% {
+        content: "Leshista";
+    }
+    81.25% {
+        content: "<Leshista";
+    }
+    84.375% {
+        content: "<Leshista>";
+    }
+    87.5% {
+        content: "<Leshista/>";
+    }
+    to {
+        content: "<Leshista/>";
+    }
+}
+
 /*===== BASIC CSS =====*/
 html {
     font-size: 10px;
@@ -57,6 +151,10 @@ svg {
 .name-typing {
     font-family: "Cutive Mono", monospace;
     padding: 3rem;
+    &::before {
+        content: "Aleshin Stanislav";
+        animation: typing 4s ease-in 2s infinite alternate;
+    }
 }
 .burger-menu {
 }
