--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,8 @@
 @import "reset.scss";
 
 /*===== VARIABLES =====*/
+
+// Mixin sets default parameters for all sections
 @mixin section-params {
     min-height: 100vh;
     position: relative;
@@ -13,6 +15,7 @@
 }
 
 /*===== ANIMATIONS =====*/
+// Animation for name-typing div in the header
 @keyframes typing {
     from {
         content: "Aleshin Stanislav|";
@@ -108,6 +111,7 @@
 
 /*===== BASIC CSS =====*/
 html {
+    //Making 1rem = 10px
     font-size: 10px;
 }
 body {
@@ -151,6 +155,7 @@ svg {
 .name-typing {
     font-family: "Cutive Mono", monospace;
     padding: 3rem;
+    //Making typing effect through changing pseudo-element's content in the animation
     &::before {
         content: "Aleshin Stanislav";
         animation: typing 4s ease-in 2s infinite alternate;
@@ -230,6 +235,7 @@ svg {
 /*===== FOOTER =====*/
 .footer {
     min-height: 15rem;
+    //Stick it to the bottom of the page
     position: relative;
     bottom: 0;
 }
