Started working on profile's text

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -197,6 +197,8 @@ svg {
                 border-radius: 50rem;
             }
         }
+        &__text {
+        }
     }
     .doings {
         @include section-params;
