--- a/scss/style.scss
+++ b/scss/style.scss
@@ -159,15 +159,96 @@ svg {
     }
 }
 
+.text {
+    position: relative;
+    font-size: 5.2rem;
+    line-height: 9rem;
+    &__hello {
+        font-style: italic;
+        font-weight: 300;
+    }
+
+    // &__motto {
+    //     position: absolute;
+    //     top: -25rem;
+    //     font-size: 15rem;
+    //     line-height: 30rem;
+    //     color: rgba(127, 127, 127, 0.2);
+    // }
+
+    &__name {
+        font-weight: 900;
+    }
+
+    &__to-be {
+        font-size: 1.8rem;
+        font-style: italic;
+        font-weight: 300;
+    }
+
+    &__profession {
+    }
+}
+
+.technologies {
+    &__items {
+        font-weight: 500;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        &_bottom {
+            margin-bottom: 15rem;
+        }
+    }
+}
+.technology {
+    flex-direction: column;
+    width: 15rem;
+    margin: 2rem;
+    &__logo {
+        img {
+            width: 15rem;
+        }
+    }
+
+    &__title {
+        display: block;
+        text-decoration: none;
+        color: inherit;
+        font-family: "Cutive Mono", monospace;
+        line-height: 2.5rem;
+        :hover {
+            cursor: pointer;
+        }
+    }
+}
+
 .title {
     margin: 4rem 0;
     font-weight: 900;
     font-size: 4.2rem;
 }
 
+h2.title {
+    margin: 2rem 0;
+    font-size: 3.4rem;
+}
+
 .fixed-height {
     height: 15rem;
 }
+
+.flex-nowrap {
+    flex-wrap: nowrap;
+}
+
+.rounded {
+    border-radius: 100rem;
+}
+.rounded-a-little {
+    border-radius: 1rem;
+}
+
 /*===== HEADER =====*/
 .header {
     min-height: 5rem;
@@ -201,37 +282,6 @@ svg {
             }
         }
 
-        .text {
-            position: relative;
-            font-size: 5.2rem;
-            line-height: 9rem;
-            &__hello {
-                font-style: italic;
-                font-weight: 300;
-            }
-
-            // &__motto {
-            //     position: absolute;
-            //     top: -25rem;
-            //     font-size: 15rem;
-            //     line-height: 30rem;
-            //     color: rgba(127, 127, 127, 0.2);
-            // }
-
-            &__name {
-                font-weight: 900;
-            }
-
-            &__to-be {
-                font-size: 1.8rem;
-                font-style: italic;
-                font-weight: 300;
-            }
-
-            &__profession {
-            }
-        }
-
         &__divider-bottom {
             svg {
                 width: calc(131% + 1.3px);
@@ -247,8 +297,6 @@ svg {
                 max-width: 100vw;
                 border-radius: 50rem;
             }
-        }
-        &__text {
         }
     }
     .doings {
@@ -267,35 +315,26 @@ svg {
                 }
             }
         }
-        .technologies {
-            &__items {
-                font-family: "Cutive Mono", monospace;
-                font-weight: 500;
-                display: flex;
-                justify-content: space-between;
-                flex-wrap: wrap;
-                &_bottom {
-                    margin-bottom: 15rem;
-                }
-            }
-        }
-        .technology {
-            flex-direction: column;
-            width: 15rem;
-            margin: 2rem;
-            &__logo {
-                img {
-                    width: 15rem;
-                }
-            }
-
-            &__title {
-            }
-        }
     }
 
     .whoings {
         @include section-params;
+        flex-direction: column;
+        justify-content: flex-start;
+        .text {
+            font-size: 3rem;
+            line-height: 5rem;
+        }
+        .technologies {
+            flex-direction: row;
+            .technology {
+                width: fit-content;
+                font-size: 2rem;
+                &__title {
+                    font-family: "Open Sans", sans-serif;
+                }
+            }
+        }
         &__divider-bottom {
             svg {
                 width: calc(100% + 1.3px);
