--- a/scss/style.scss
+++ b/scss/style.scss
@@ -226,11 +226,15 @@ svg {
         color: inherit;
     }
     &__items {
+        display: flex;
+        flex-wrap: wrap;
+        width: 60vw;
+        justify-content: space-between;
     }
     .project {
-        max-width: 30vw;
-        font-size: 3rem;
-        padding: 2rem;
+        max-width: 26vw;
+        font-size: 2.5rem;
+        padding: 2.5rem;
         display: flex;
         background: linear-gradient(135deg, lighten(#100f10, 10), darken(#100f10, 10));
         border-radius: 2.5rem;
@@ -243,14 +247,19 @@ svg {
         }
 
         &__logo {
+            img {
+                max-width: 18rem;
+            }
         }
 
         &__title {
+            font-size: 3.5rem;
+            margin-top: 2rem;
         }
 
         &__github-logo {
             position: absolute;
-            bottom: 2rem;
+            bottom: 1rem;
             img {
                 max-width: 20%;
             }
