--- a/scss/style.scss
+++ b/scss/style.scss
@@ -229,12 +229,15 @@ svg {
         display: flex;
         flex-wrap: wrap;
         width: 60vw;
-        justify-content: space-between;
+        margin-bottom: 20rem;
+    }
+    .title {
     }
     .project {
         max-width: 26vw;
         font-size: 2.5rem;
         padding: 2.5rem;
+        margin: 1rem auto;
         display: flex;
         background: linear-gradient(135deg, lighten(#100f10, 10), darken(#100f10, 10));
         border-radius: 2.5rem;
@@ -403,7 +406,6 @@ h2.title {
         @include section-params;
         flex-direction: column;
         justify-content: flex-start;
-        padding-top: 2.5rem;
         background: linear-gradient(0deg, darken(#1d7f55, 20), lighten(#1d7f55, 20));
         &__divider-bottom {
             svg {
