--- a/scss/style.scss
+++ b/scss/style.scss
@@ -252,6 +252,10 @@ svg {
         }
 
         &__logo {
+            max-height: 13rem;
+            overflow: hidden;
+            border-radius: 1rem;
+            margin-bottom: 1rem;
             img {
                 max-width: 18rem;
             }
@@ -271,6 +275,7 @@ svg {
         }
 
         &__right-side {
+            padding-left: 0.5rem;
         }
 
         &__technologies {
