--- a/scss/media.scss
+++ b/scss/media.scss
@@ -1,5 +1,54 @@
-@media (max-width: 76.8rem) {
+@media (max-width: 1600px) {
+    .project {
+        &__technologies {
+            font-size: 2rem;
+            line-height: 2.5rem;
+        }
+        .title {
+            font-size: 2.5rem !important;
+        }
+    }
+}
+
+@media (max-width: 1280px) {
+    .projects {
+        .project {
+            max-width: 24rem;
+            flex-direction: column;
+            &__left-side {
+                max-width: fit-content;
+            }
+            &__github-logo {
+                position: static;
+                margin-top: 1.5rem;
+            }
+        }
+    }
+
+    .project {
+        &__technologies {
+            font-size: 2rem;
+            line-height: 2.5rem;
+        }
+        .title {
+            font-size: 2.5rem !important;
+        }
+    }
+}
+
+@media (max-width: 992px) {
+    .projects {
+        .project {
+            max-width: 30rem;
+        }
+    }
+}
+
+@media (max-width: 768px) {
     .profile {
         flex-direction: column-reverse;
     }
+}
+
+@media (max-width: 576px) {
 } ;
