--- a/scss/media.scss
+++ b/scss/media.scss
@@ -11,6 +11,13 @@
 }
 
 @media (max-width: 1280px) {
+    .technologies {
+        .technology {
+            &__title {
+                font-size: 2.5rem;
+            }
+        }
+    }
     .projects {
         .project {
             max-width: 24rem;
@@ -37,18 +44,69 @@
 }
 
 @media (max-width: 992px) {
+    .flex-nowrap {
+        flex-wrap: wrap;
+    }
+    svg {
+        height: 10rem !important;
+    }
+    .rounded-a-little {
+        width: max-content !important;
+    }
+    .profile {
+        flex-direction: column-reverse;
+        .photo {
+            margin-top: 10rem;
+        }
+        .text {
+            margin-bottom: 10rem;
+        }
+    }
     .projects {
         .project {
             max-width: 30rem;
+            &__logo {
+                overflow: visible;
+                max-height: none;
+                img {
+                    max-width: 25rem;
+                }
+            }
         }
     }
 }
 
 @media (max-width: 768px) {
-    .profile {
-        flex-direction: column-reverse;
-    }
 }
 
 @media (max-width: 576px) {
+    .name-typing {
+        font-size: 2.2rem;
+    }
+    .profile {
+        .text {
+            font-size: 3.5rem;
+            line-height: 5rem;
+            margin-top: 2rem;
+        }
+    }
+    .technologies {
+        .technology {
+            &__title {
+                font-size: 2.2rem;
+            }
+        }
+    }
+    .whoings {
+        .text {
+            font-size: 2.5rem !important;
+            line-height: 3rem !important;
+        }
+    }
+    .works {
+        padding: 0 10vw !important;
+        .projects__items {
+            width: fit-content;
+        }
+    }
 } ;
