--- a/scss/style.scss
+++ b/scss/style.scss
@@ -168,14 +168,6 @@ svg {
         font-weight: 300;
     }
 
-    // &__motto {
-    //     position: absolute;
-    //     top: -25rem;
-    //     font-size: 15rem;
-    //     line-height: 30rem;
-    //     color: rgba(127, 127, 127, 0.2);
-    // }
-
     &__name {
         font-weight: 900;
     }
@@ -441,6 +433,7 @@ h2.title {
         margin-bottom: 2rem;
     }
     .links {
+        white-space: nowrap;
         img {
             max-width: 5rem;
         }
