--- a/scss/style.scss
+++ b/scss/style.scss
@@ -106,6 +106,7 @@
     }
     to {
         content: "<Leshista/>";
+        color: #32d08c;
     }
 }
 
@@ -325,12 +326,17 @@ h2.title {
 .nav {
     width: 65vw;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     &__item {
         font-family: "Cutive Mono", monospace;
         text-decoration: none;
         color: inherit;
+        transition-property: color;
+        transition-duration: 500ms;
+        &:hover {
+            color: #32d08c;
+        }
     }
 }
 
