Added burger-menu block and made it possible for calling it

--- a/scss/media.scss
+++ b/scss/media.scss
@@ -59,7 +59,7 @@
         .nav {
             display: none;
         }
-        .burger-menu {
+        .burger {
             display: block;
         }
     }
