--- a/scss/style.scss
+++ b/scss/style.scss
@@ -325,6 +325,10 @@ h2.title {
     border-radius: 1rem;
 }
 
+.hidden {
+    display: none;
+}
+
 /*===== HEADER =====*/
 .header {
     min-height: 5rem;
@@ -355,9 +359,10 @@ h2.title {
     }
 }
 
-.burger-menu {
+.burger {
     display: none;
-    padding: 2rem;
+    padding: 2.5rem;
+    z-index: 100;
     &__stripe {
         background-color: #32d08c;
         width: 4rem;
@@ -484,6 +489,15 @@ h2.title {
             @include hover-size-increase;
         }
     }
+}
+
+.burger-menu {
+    position: fixed;
+    left: 0;
+    top: 0;
+    min-height: 100vh;
+    min-width: 100vw;
+    background-color: #100f10;
 }
 
 @import "media";
