--- a/scss/style.scss
+++ b/scss/style.scss
@@ -326,7 +326,8 @@ h2.title {
 }
 
 .hidden {
-    display: none;
+    opacity: 0;
+    left: 100vw !important;
 }
 
 .position-fixed {
@@ -510,11 +511,13 @@ h2.title {
 
 .burger-menu {
     position: fixed;
-    left: 0;
     top: 0;
+    left: 0;
     min-height: 100vh;
     min-width: 100vw;
     background-color: #100f10;
+    transition-property: opacity, left;
+    transition-duration: 500ms;
 }
 
 @import "media";
