--- a/scss/style.scss
+++ b/scss/style.scss
@@ -513,11 +513,21 @@ h2.title {
     position: fixed;
     top: 0;
     left: 0;
-    min-height: 100vh;
+    min-height: 1000vh;
     min-width: 100vw;
     background-color: #100f10;
     transition-property: opacity, left;
     transition-duration: 500ms;
+    .nav {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        width: 100vw;
+        height: 100vh;
+        &__item {
+            font-size: 3rem;
+        }
+    }
 }
 
 @import "media";
